# backend-delfos

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/workflows/: sonar.yml
evaluation/: __init__.py  config.py  executor.py  loader.py  run.py
evaluation/data/: queries.csv
evaluation/notebooks/: analysis.ipynb
evaluation/results/: 20251215_200331_results.json  20251215_204640_results.json  20251216_045535_results.json  20251216_051940_results.json  20251216_062946_results.json
src/: __init__.py  app.py
src/api/: dependencies.py  models.py  response.py  router.py
src/api/routers/: __init__.py  advisor.py  cache.py  chat.py  chat_v2.py  graphs.py  health.py  informes.py  projects.py
src/config/: archetypes.py  constants.py  database.py  message.py  prompts.py  settings.py  subtypes.py  validation.py
src/config/database/: __init__.py  concepts.py  helpers.py  schemas.py  types.py
src/config/prompts/: __init__.py  bullets.py  formatting.py  handlers.py  intent.py  intent_hierarchical.py  labels.py  sql.py  triage.py  unified_intent_viz.py  verification.py  viz.py
src/examples/: README.md  plotly_blob_demo.py
src/examples/output/: oceania_life_expectancy.html
src/infrastructure/cache/: __init__.py  bounded_cache.py  schema_cache.py  semantic_cache.py  semantic_cache_v2.py
src/infrastructure/database/: __init__.py  connection.py  helpers.py  keepalive.py  tools.py
src/infrastructure/llm/: __init__.py  executor.py  factory.py
src/infrastructure/logging/: __init__.py  logger.py  session_logger.py
src/infrastructure/mcp/: __init__.py  client.py
src/infrastructure/storage/: __init__.py  blob_client.py
src/orchestrator/: __init__.py  context.py  handler_router.py  pipeline.py  sql_flow.py  state.py  step_timer.py
src/orchestrator/handlers/: __init__.py  _llm_helper.py  clarification.py  follow_up.py  general.py  greeting.py  viz_request.py
src/patterns/: __init__.py  comparacion.py  registry.py  relacion.py
src/services/advisor/: __init__.py  agent.py  compaction.py  context.py  prompts.py  report_context.py  session_store.py  tools.py
src/services/analysis/: __init__.py  correlation.py
src/services/chat_v2/: __init__.py  agent.py  compaction.py  context.py  indicators.py  models.py  prompts.py  session_store.py  tools.py
src/services/formatting/: __init__.py  code_formatter.py  formatter.py
src/services/graph/: __init__.py  executor.py  models.py  service.py  tools.py
src/services/graphs/: __init__.py  service.py
src/services/informes/: __init__.py  service.py
src/utils/: graph_data.py  json_parser.py  retry.py  text_processing.py  tool_resolver.py
tests/: conftest.py
tests/integration/: test_sql_dates.py  test_sql_pipeline.py  test_viz_pipeline.py
tests/unit/: test_code_formatter.py  test_column_extractor.py  test_context.py  test_correlation.py  test_formatter.py  test_graph_endpoints.py  test_indicators.py  test_informe_endpoints.py  test_intent.py  test_json_parser.py  test_registry.py  test_relacion_hooks.py  test_router_endpoints.py  test_sql_validator.py  test_subtypes.py  test_table_selector.py  test_triage.py  test_validator.py
(+29 files in other folders)
