[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delfos-nl2sql"
version = "0.1.0"
description = "Natural Language to SQL pipeline with multi-step orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "azure-identity>=1.15.0",
    "anthropic>=0.18.0",
    "mcp>=0.9.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "agent-framework>=0.1.0",
    "agent-framework-azure-ai>=0.1.0",
    "plotly>=5.18.0",
    "kaleido>=0.2.1",
    "pandas>=3.0.0rc0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
]

[tool.uv]
prerelease = "allow"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

